--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.1",
+    "request": "^2.88.2",
     "shortid": "^2.2.15"
   }
 }
