--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Ted-Vu/UrlShortener#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.1",
