--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "prod":"",
+    "dev": "nodemon ./server.js"
   },
   "repository": {
     "type": "git",
